--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul class="nav-links">
                     <li><a class="nav-link" href="#top">Top</a></li>
                     <li><a class="nav-link" href="#projects">Projects</a></li>
-                    <li><a class="nav-link" href="#experience">Experience</a></li>
+                    <li><a class="nav-link" href="#education">Education</a></li>
                 </ul>
             </nav>
         </header>
@@ -59,7 +59,13 @@
             </li>
         </ul>
     </section>
-    <section class="experience" id="experience">Experience</section>
+    <section class="education" id="education">
+        <h2>Education</h2>
+        <ul class="education-list">
+            <li class="education-item">High School | Loyola Gymnasium | Sep/2016 - Jun/2019</li>
+            <li class="education-item">University | UBT | Sep/2019 | Present</li>
+        </ul>
+    </section>
     <footer>
         <a href="#top">Back to top</a>
     </footer>
